<resources>
    <string name="app_name">personal</string>
    <string name="login_title">服务端登录</string>
    <string name="login_pl_phone">请输入手机号码</string>
    <string name="login_pl_psw">请输入密码</string>
    <string name="login_pl_choice_qiye">请选择企业编号</string>
    <string name="login_pl_edit_qiye">请输入企业编号</string>
    <string name="login_agg">同意《服务人员合作协议》</string>
    <string name="login_rem_psw">记住密码</string>
    <string name="login">登录</string>
    <string name="login_new">新用户？</string>
    <string name="login_reg">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_reset">重置</string>
    <string name="login_agreement">服务人员协议</string>
    <string name="person_order">我的订单</string>
    <string name="person_money">我的钱包</string>
    <string name="person_jiangli">推荐奖励</string>
    <string name="person_pingjia">乘客评价</string>
    <string name="person_message">消息中心</string>
    <string name="person_driver">成为司机</string>
    <string name="my_message">我的消息</string>
    <string name="person_set">设置</string>
    <string name="person_tuiguang">推广</string>
    <string name="person_card">我的名片</string>
    <string name="person_center">个人中心</string>
    <string name="set_change_psw">修改密码</string>
    <string name="set_voice_play">语音播报</string>
    <string name="set_shake">震动</string>
    <string name="set_orientation">始终横屏显示计价器</string>
    <string name="set_language">选择语言</string>
    <string name="set_navi">导航偏好</string>
    <string name="set_notify_help">通知设置</string>
    <string name="set_statistics">统计中心</string>
    <string name="set_help">帮助中心</string>
    <string name="set_feedback">意见反馈</string>
    <string name="set_contract_us">联系我们</string>
    <string name="set_about_us">关于我们</string>
    <string name="set_logout">注销</string>
    <string name="set_hint">提示</string>
    <string name="set_sure_exit">您确定退出当前账号吗？</string>
    <string name="set_sure">确定</string>
    <string name="set_cancel">取消</string>
    <string name="set_defult_navi">默认启动导航</string>
    <string name="set_back_run">后台常驻</string>
    <string name="register_driver">服务端注册</string>
    <string name="register_send_code">发送验证码</string>
    <string name="register_send_succed">发送成功</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="rg_iamge_code">请输入图形验证码</string>
    <string name="register_password_hint">设置登录密码</string>
    <string name="register_agg">已阅读并同意《服务人员合作协议》</string>
    <string name="register">注册</string>
    <string name="register_cheack_phone">请输入正确的手机号</string>
    <string name="register_input_ps">请输入登录密码</string>
    <string name="register_contract_phone">联系人电话</string>
    <string name="register_contract_hint">紧急联系人电话</string>
    <string name="register_contract_phone_hint">请输入正确的紧急联系人电话</string>
    <string name="register_base_msg">基本信息</string>
    <string name="register_pic_msg">图像信息</string>
    <string name="register_please_photo">请上传自己的照片</string>
    <string name="register_name">司机姓名</string>
    <string name="register_phone">手机号码</string>
    <string name="register_ic_card">身份证号</string>
    <string name="register_contract">紧急联系人</string>
    <string name="register_type">业务类型</string>
    <string name="register_type_hint">请选择您的业务类型</string>
    <string name="register_compney">所属分公司</string>
    <string name="register_compney_hint">请选择您的所属分公司</string>
    <string name="register_time_end">驾驶证有效截止时间</string>
    <string name="register_time_start">驾驶证有效开始时间</string>
    <string name="register_time_hint">请选择有效时间</string>
    <string name="register_time2_end">网约车从业资格证截止时间</string>
    <string name="register_time2_start">网约车从业资格证开始时间</string>
    <string name="register_become">成为司机</string>
    <string name="register_checking">信息正在审核中</string>
    <string name="register_wait">请耐心等待</string>
    <string name="register_no_pass">审核未通过</string>
    <string name="register_amend">去修改</string>
    <string name="register_please_name">请输入您的姓名</string>
    <string name="register_please_phone">请输入手机号码</string>
    <string name="register_please_id_card">请输入身份证号</string>
    <string name="register_please_contract">紧急联系人（姓名+电话+关系）</string>
    <string name="register_business">开展业务</string>
    <string name="register_daijia">代驾</string>
    <string name="register_zhuanche">专车</string>
    <string name="register_errand">跑腿</string>
    <string name="register_freight">货运</string>
    <string name="register_zhuanxian">专线</string>
    <string name="register_refer">推荐人工号</string>
    <string name="register_refer_no">输入推荐人工号</string>
    <string name="register_agree">同意《服务人员服务协议》</string>
    <string name="register_next_step">下一步</string>
    <string name="register_upload_card">上传身份证</string>
    <string name="register_upload_driving">上传驾驶证</string>
    <string name="register_upload_zige">上传网约车从业资格证</string>
    <string name="register_front">正面</string>
    <string name="register_back">反面</string>
    <string name="register_hint_driving">确保驾驶证真实有效</string>
    <string name="register_hint_id_card">必须为本人身份证\n身份证上的信息必须真实有效且清晰可见</string>
    <string name="register_hint_photo">请上传您的半身照</string>
    <string name="register_known">知道了</string>
    <string name="register_apply">提交资料</string>
    <string name="register_title">服务人员注册</string>
    <string name="register_no_loc">未获取到定位信息</string>
    <string name="register_re_company">加载公司信息失败，正在重试</string>
    <string name="register_re_business">加载业务类型失败，正在重试</string>
    <string name="register_finish">获取公司信息失败,请稍候再试</string>
    <string name="reset_login_psw">设置登录密码</string>
    <string name="reset_please_6">请输入6–16新位密码</string>
    <string name="reset_login_phone">设置登录手机号</string>
    <string name="reset_please_11">请输入11位手机号码</string>
    <string name="reset_please_code">请输入验证码</string>
    <string name="reset_confirm">确定</string>
    <string name="reset_edit_words">输入图片文字</string>
    <string name="reset_refresh">点击刷新</string>
    <string name="reset_edit_code">输入验证码</string>
    <string name="reset_code_to_where">验证码发送至</string>
    <string name="reset_sec_resend">秒后重发</string>
    <string name="reset_resend_code">重新获取></string>
    <string name="reset_error_auth">图形验证码错误</string>
    <string name="reset_change_suc">修改密码成功</string>
    <string name="recharge_title">余额充值</string>
    <string name="recharge_balance">我的余额(元)</string>
    <string name="recharge_please_money">请输入充值金额</string>
    <string name="recharge_50">¥50</string>
    <string name="recharge_100">¥100</string>
    <string name="recharge_200">¥200</string>
    <string name="recharge_pay_wechat">微信支付</string>
    <string name="recharge_pay_zfb">支付宝支付</string>
    <string name="recharge_pay_union">银联支付</string>
    <string name="recharge_0_money">请选择或输入充值金额</string>
    <string name="pocket_title">我的钱包</string>
    <string name="pocket_balance">账户余额（元）</string>
    <string name="pocket_recharge">充值</string>
    <string name="pocket_detail">账户明细</string>
    <string name="msg_notify">通知</string>
    <string name="msg_notice">公告</string>
    <string name="recommend_title">推荐奖励</string>
    <string name="recommend_yi">已推荐人数</string>
    <string name="recommend_unit">(人)</string>
    <string name="recommend_money">奖励金额</string>
    <string name="recommend_person">我推荐的人</string>
    <string name="stats_today">今日</string>
    <string name="stats_yesterday">昨日</string>
    <string name="stats_month">本月</string>
    <string name="stats_year">今年</string>
    <string name="stats_order">订单</string>
    <string name="stats_accept_order_no">接单数</string>
    <string name="stats_complete_order_no">完成订单数</string>
    <string name="stats_accept_percent">接单率</string>
    <string name="stats_refuse_percent">拒单率</string>
    <string name="stats_income">收入</string>
    <string name="stats_order_statement">订单流水</string>
    <string name="stats_income_statement">收入流水</string>
    <string name="stats_service">服务</string>
    <string name="stats_star">乘客评价得分</string>
    <string name="stats_complain">被投诉的次数</string>
    <string name="detail_balance">我的余额</string>
    <string name="tixian_please_money">请输入提现金额</string>
    <string name="tixian_title">余额提现</string>
    <string name="tixian_please_bank">请输入银行</string>
    <string name="tixian_please_number">请输入本人银行卡号</string>
    <string name="tixian_please_name">请输入持卡人姓名</string>
    <string name="tixian_confirm">确认提现</string>
    <string name="tixian_rule">提现规则</string>
    <string name="tixian_record">提现记录</string>
    <string name="tixian_this_most">本次可提现</string>
    <string name="tixian_my_balance">我的余额(元)</string>
    <string name="tixian_hint">温馨提示</string>
    <string name="change_psw_old">请输入旧密码</string>
    <string name="change_psw_new">请输入新密码</string>
    <string name="change_psw_confirm">请确认新密码</string>
    <string name="change_confirm">确定</string>
    <string name="language_flow_sys">跟随系统</string>
    <string name="language_sin_cn">简体中文</string>
    <string name="language_fan_cn">繁体中文</string>
    <string name="language_english">英语</string>
    <string name="feedback_please">请留下您的宝贵意见</string>
    <string name="feedback_apply">提交</string>
    <string name="feedback_please_msg">请填写您的意见</string>
    <string name="feedback_suc">我们已收到您的宝贵意见</string>
    <string name="total_score">累计得分</string>
    <string name="total_order">累计接单</string>
    <string name="total_score_dis">累计星级分布</string>
    <string name="star_5">5星</string>
    <string name="star_4">4星</string>
    <string name="star_3">3星</string>
    <string name="star_2">2星</string>
    <string name="star_1">1星</string>
    <string name="consumer_eva">乘客评价</string>
    <string name="all_read">标记为已读</string>
    <string name="click_read">点击查看详情 ></string>
    <string name="announcement">公告</string>
    <string name="ti_xian">提现</string>
    <string name="yuan">元</string>
    <string name="more">更多</string>
    <string name="near_wc">附近厕所</string>
    <string name="reli_pic">热力图</string>
    <string name="weather_forecast">天气预报</string>
    <string name="contract_service">联系客服</string>
    <string name="help_center">帮助中心</string>
    <string name="sys_check">系统检测</string>
    <string name="congestion">躲避拥堵</string>
    <string name="avoidhightspeed">不走高速</string>
    <string name="cost">避免收费</string>
    <string name="hightspeed">高速优先</string>
    <string name="please_money">请输入合法的提现金额</string>
    <string name="please_bank_name">请输入银行名</string>
    <string name="please_bank_number">请输入银行卡号</string>
    <string name="please_bank_owner">请输入持卡人姓名</string>
    <string name="tixian_apply_suc">提交成功，请等待审核</string>
    <string name="no_recommend">您还未有任何推荐奖励，快去多多分享吧</string>
    <string name="meter">米</string>
    <string name="k_meter">千米</string>
    <string name="query_live_failed">查询实况天气失败</string>
    <string name="query_forecast_failed">查询天气预报失败</string>
    <string name="fabu">发布</string>
    <string name="different_new_confirm">新密码与确认密码不一致</string>
    <string name="same_old_new">新密码与旧密码相同</string>
    <string name="not_same_old">您输入的旧密码与所登录的账户密码不匹配</string>
    <string name="wx_pay_success">微信充值成功</string>
    <string name="wx_pay_fail">微信充值失败</string>
    <string name="wx_share_suc">微信分享成功</string>
    <string name="wx_share_failed">微信分享失败</string>
    <string name="wx_pay_failed">微信支付数据错误:</string>
    <string name="alipay_success">支付宝充值成功</string>
    <string name="alipay_failed">支付宝充值失败</string>
    <string name="near_no_wc">附近暂无厕所</string>
    <string name="change_psw_suc">修改密码成功</string>
    <string name="tixian_shenpi">审批中</string>
    <string name="tixian_agree">已通过</string>
    <string name="tixian_refuse">已驳回</string>
    <string name="please_agree_agreement">请同意服务协议</string>
    <string name="web_site">网站</string>
    <string name="business">商务合作</string>
    <string name="share_succeed">分享成功</string>
    <string name="share_error">分享失败</string>
    <string name="cancel_share">取消分享</string>
    <string name="loading_qr_code">二维码加载中,请稍候</string>
    <string name="number">单</string>
    <string name="all_order_number">累计评价</string>
</resources>