<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.easymi.component.widget.CusToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="#f7f7f7"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/register_base_msg" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:id="@+id/photo_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/photo_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="25dp"
                        android:src="@mipmap/register_photo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_please_photo"
                        android:textColor="#232323"
                        android:textSize="18sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_name"
                        android:textColor="#232323" />

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="@string/register_please_name"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_phone"
                        android:textColor="#232323" />

                    <EditText
                        android:id="@+id/et_driver_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="@string/register_please_phone"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_ic_card"
                        android:textColor="#232323" />

                    <EditText
                        android:id="@+id/et_idcard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="@string/register_please_id_card"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_contract"
                        android:textColor="#232323" />

                    <EditText
                        android:id="@+id/et_contact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="@string/register_contract"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_contract_phone"
                        android:textColor="#232323" />

                    <EditText
                        android:id="@+id/et_contact_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="@string/register_contract_hint"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_compney"
                        android:textColor="#232323" />

                    <TextView
                        android:id="@+id/tv_compney"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="@string/register_compney_hint"
                        android:textSize="14sp"
                        android:drawableRight="@mipmap/ic_register_right"
                        android:drawablePadding="5dp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_type"
                        android:textColor="#232323" />

                    <TextView
                        android:id="@+id/tv_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="@string/register_type_hint"
                        android:textSize="14sp"
                        android:drawableRight="@mipmap/ic_register_right"
                        android:drawablePadding="5dp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_time_start"
                        android:textColor="#232323" />

                    <TextView
                        android:id="@+id/tv_time_start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="@string/register_time_hint"
                        android:textSize="14sp" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_time_end"
                        android:textColor="#232323" />

                    <TextView
                        android:id="@+id/tv_time_end"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="@string/register_time_hint"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_refer"
                        android:textColor="#232323" />

                    <EditText
                        android:id="@+id/et_work_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:hint="@string/register_refer_no"
                        android:textSize="14sp" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />
                <Button
                    android:id="@+id/next_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/corners_button_selector"
                    android:text="@string/register_next_step"
                    android:textColor="@color/white" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.easymi.personal.widget.CusImgHint
        android:id="@+id/cus_hint"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>