<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.easymi.component.widget.CusToolbar
        android:id="@+id/cus_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_old"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/change_psw_old"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/dark_gray" />

        <EditText
            android:id="@+id/edit_new"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/change_psw_new"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/dark_gray" />

        <EditText
            android:id="@+id/confirm_new"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/change_psw_confirm"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/dark_gray" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:enabled="false"
        android:textColor="@color/white"
        android:text="@string/change_confirm"
        android:background="@drawable/corners_button_able_selector"/>

</LinearLayout>