<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.easymi.component.widget.CusToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_iamge"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@mipmap/ic_rg_passing"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_checking"
                android:textSize="16sp"
                android:textColor="@color/color_333333"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/tv_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_wait"
                android:textSize="14sp"
                android:textColor="@color/color_999999"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/tv_amend"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:text="@string/register_amend"
                android:gravity="center"
                android:background="@drawable/cornor_line_base_20dp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="15dp"
                android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
</LinearLayout>